# Varic

./: .clang-format  .clangformat  .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml  requirements.txt
cmake/modules/: FindGperftools.cmake
include/thesis/algo/assemble/: read_assembler.hpp
include/thesis/corrector/: base_corrector.hpp  fragmented_corrector.hpp
include/thesis/corrector/detail/: overlap.hpp  read.hpp  sequence.hpp  test_read.hpp  window.hpp
include/thesis/ds/: segtree.hpp
include/thesis/ds/graph/: flat_storage.hpp  read_graph.hpp  test_graph.hpp
include/thesis/format/: maf.hpp  paf.hpp  vcf.hpp
include/thesis/utility/: numeric.hpp
include/thesis/utility/eval/: corrected_result.hpp
include/thesis/utility/file_io/: parse.hpp
include/thesis/utility/threadpool/: threadpool.hpp  worker.hpp
include/varic/algo/assemble/: read_assembler.hpp
include/varic/corrector/: base_corrector.hpp  fragmented_corrector.hpp
include/varic/corrector/detail/: read.hpp  test_read.hpp  window.hpp
include/varic/ds/: segtree.hpp
include/varic/ds/graph/: boost_flat_map.hpp
include/varic/format/: paf.hpp
include/varic/utility/eval/: corrected_result.hpp
include/varic/utility/file_io/: parse.hpp  read_record.hpp
scripts/: run.sh  run_align_param.sh
scripts/correction_tools/: run_big_correction.py  run_correction_tools.py  run_correction_tools.sh
scripts/correction_tools/CONSENT/: run_CONSENT.py  run_consent.sh
scripts/correction_tools/canu/: run_canu.py  run_canu.sh
scripts/correction_tools/lorma/: run_lorma.py
scripts/correction_tools/racon/: run_racon.py
scripts/correction_tools/vechat/: run_vechat.py  vechat.sh
scripts/evaluation/: eval.py  run_big_eval.py  run_eval.py  run_eval.sh  run_eval2.py
scripts/evaluation/draw/: assemble_kmer_profile.py  draw_eval.py  draw_kmer_profile.py  eval.py  kmer_profile.py
scripts/evaluation/flo/: flo_opts.yaml
scripts/misc/: get_assemble_info.py  get_read_info.py
scripts/simulators/: cal_overlap.sh  run_simulation.sh  simulate_haplotype_and_read  simulate_multithread
scripts/simulators/pbsim/: pbsim3_err.sh  pbsim3_qr.sh  simulate_read  simulate_snp_genome
scripts/simulators/simuG/: run_simuG.py  run_simuG.sh
src/: eval.cpp  eval2.cpp  eval_between_haplotype.py  eval_between_haplotype.sh  fasta2msa.cpp  maf2fa.cpp  main.cpp  test.cpp
src/algo/: assembler.hpp  correction.hpp  preprocess.hpp
src/graph/: graph_wrapper.hpp  read_graph.hpp
src/test/: indel_profile_on_end.cpp
src/utility/: all.hpp  confusion_matrix.hpp  file_io.hpp  haplotype.hpp  maf.hpp  paf.hpp
src/utility/eval/: corrected_result.hpp  haplotype.hpp
src/utility/format/: vcf.hpp
src/utility/threadpool/: threadpool.hpp  worker.hpp
submodules/: CMakeLists.txt
